# library-management-system

./: .gitignore  README.md
docs/: User Manual.txt  project_plan.md  sample_output.md  user_manual.md
report/: project_report.docx  project_report.md
src/: CMakeLists.txt  Makefile  library  library.cpp  library.h  main.cpp  validation.h
